# gdocspalette-generator

./: CMakeLists.txt  main.cpp
